--- a/package.json
+++ b/package.json
@@ -8,14 +8,14 @@
     "dev": "nodemon server.js"
   },
   "dependencies": {
-    "express": "^5.1.0",
-    "body-parser": "^2.2.0"
+    "body-parser": "^2.2.0",
+    "express": "^4.21.2"
   },
   "engines": {
     "node": "16.x"
   },
   "license": "MIT",
   "devDependencies": {
-    "nodemon": "^2.0.22"
+    "nodemon": "^3.1.9"
   }
 }
